--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "chart.js": "^2.7.2",
     "chartjs-plugin-datalabels": "^0.3.0",
     "react": "^16.4.1",
